--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container home-page">
         <h1>✈️ Travel Itineraries</h1>
         <p class="subtitle">Choose a destination to view the full itinerary</p>
         
