--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="container home-page">
+<body class="home-page">
+    <div class="container">
         <h1>✈️ Travel Itineraries</h1>
         <p class="subtitle">Choose a destination to view the full itinerary</p>
         
