--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body class="home-page">
     <div class="container">
-        <h1>✈️ Travel Itineraries</h1>
-        <p class="subtitle">Choose a destination to view the full itinerary</p>
+        <div class="home-heading">
+            <h1>✈️ Travel Itineraries</h1>
+            <p class="subtitle">Choose a destination to view the full itinerary</p>
+        </div>
         
         <div class="trip-grid">
             <a href="estonia.html" class="trip-card">
