--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <h2>Porto by train</h2>
                 <div class="arrow">→</div>
             </a>
+
+            <a href="slovenia.html" class="trip-card">
+                <h2>Slovenia</h2>
+                <div class="arrow">→</div>
+            </a>
             
             <a href="asia.html" class="trip-card">
                 <h2>Southeast Asia</h2>
