--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <h2>Slovenia</h2>
                 <div class="arrow">→</div>
             </a>
+
+            <a href="australia.html" class="trip-card">
+                <h2>Colin in Australia</h2>
+                <div class="arrow">→</div>
+            </a>
             
             <a href="asia.html" class="trip-card">
                 <h2>Southeast Asia</h2>
