--- a/Destinations/Australia/australia.html
+++ b/Destinations/Australia/australia.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Southeast Asia - Sabbatical 2027</title>
+    <title>Singapore / Australia</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <div class="container">
-        <a href="index.html" class="back-button">← Back to Home</a>
+        <a href="../../index.html" class="back-button">← Back to Home</a>
         <div class="itinerary-content" id="content">Loading...</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
         // Fetch and display the markdown file
-        fetch('asia.md')
+        fetch('australia.md')
             .then(response => response.text())
             .then(markdown => {
                 document.getElementById('content').innerHTML = marked.parse(markdown);
@@ -24,7 +24,7 @@
                 document.getElementById('content').innerHTML = '<p>Error loading itinerary. Please try again.</p>';
                 console.error('Error loading markdown:', error);
             });
-        
+
         document.addEventListener('click', function (event) {
             const link = event.target.closest('a');
             if (link && link.href) {
